<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="st_HMItoPLC_HMI" Id="{f7a628cf-d117-49c0-9616-acdf98888430}">
    <Declaration><![CDATA[TYPE st_HMItoPLC_HMI :
STRUCT
    bAutoManual_btn : BOOL;
    bShowResetBtn : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>